<resources>
    <string name="app_name">Wash Squad</string>
    <string name="map_api_key">AIzaSyDRH058OG79geHwTA1xw5hlOmomHIFbj94</string>
    <string name="log_in">Log In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="are_you_forgot_password">Forgot password ?</string>
    <string name="do_you_have_a_new_account">Do you have a new account?</string>
    <string name="create_an_account">Create a new account</string>
    <string name="user_name">Name</string>
    <string name="name">Name : </string>
    <string name="phone">Phone Number</string>
    <string name="phone2">Phone Number : </string>
    <string name="you_already_have_an_account_log_in">You already have an account! log in</string>
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="more">More</string>
    <string name="bank_account">Bank account</string>
    <string name="terms_and_conditions">Terms And Conditions</string>
    <string name="about_app">About Tour</string>
    <string name="contact_us">Contact Us</string>
    <string name="logout">Logout</string>
    <string name="send">send</string>
    <string name="skip">Follow-up as a visitor</string>
    <string name="field_req">Field required</string>
    <string name="inv_email">Invalid email</string>
    <string name="back">Back</string>
    <string name="wait">Wait...</string>
    <string name="inv_em_ps">Invalid Email or Password</string>
    <string name="failed">Failed</string>
    <string name="something">Check internet connection</string>
    <string name="em_exist">Phone number is exist</string>
    <string name="profile">Profile</string>
    <string name="general_settings">General Settings</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="language_settings">Language Settings</string>
    <string name="sar">SAR</string>
    <string name="no_details">No details</string>
    <string name="sign_in">Sign In</string>
    <string name="please_sign_in_or_sign_up">Please Sign In or Sign Up</string>
    <string name="cancel">Cancel</string>
    <string name="suc">Success !</string>
    <string name="bank_name">Bank Name</string>
    <string name="account_name">Account Name</string>
    <string name="account_iban">Account IBAN</string>
    <string name="account_number">Account Number</string>
    <string name="ok">OK</string>
    <string name="upload_picture">Upload Picture</string>
    <string name="select_a_picture_to_upload">Select a Picture to Upload</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="perm_image_denied">Permission image denied</string>
    <string name="done">Done</string>
    <string name="pass_short">Password to short</string>
    <string name="new_order">New Order</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="inv_now">Invalid now</string>
    <string name="forget_password">Forget Password?</string>
    <string name="recov_msg">Recover your account.We will send you a link to change your password</string>
    <string name="enter_code">Enter code</string>
    <string name="we_ll_never_share_or_sell_your_phone_number_your_privacy_is_100_guaranteed">We\'ll never share or sell your phone number your privacy is 100% guaranteed.</string>
    <string name="enter_the_sms_verification_code_below_that_was_sent_to_your_mobile_phone">Enter the SMS verification code below that was sent to your mobile phone</string>
    <string name="inc_code_verification">Incorrect code verification</string>
    <string name="you_will_receive_4_digit">You will receive 4 digit code on your mobile</string>
    <string name="resend">Resend</string>
    <string name="confirm">Confirm</string>
    <string name="share">Share</string>
    <string name="order_number">Order number</string>
    <string name="city">City</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="conditions">Conditions</string>
    <string name="choose">Choose</string>
    <string name="day">Day</string>
    <string name="more2">More</string>
    <string name="inv_phone">Invalid phone</string>
    <string name="ch_city">Choose city</string>
    <string name="ch_image">Choose image</string>
    <string name="ch_bank">Choose bank</string>
    <string name="inc_phone_pas">Incorrect phone number or password</string>
    <string name="ver_code_sent">Verification code is sent</string>
    <string name="order_sent_suc">Order sent successfully.the order number is :</string>
    <string name="order_state">Order state</string>
    <string name="details">Order details</string>
    <string name="my_order">My order</string>
    <string name="no_orders_to_display">No Orders to show</string>
    <string name="price">Price : </string>
    <string name="no_notifications_to_display">No notifications to display</string>
    <string name="send_order">Send Order</string>
    <string name="add_comment">Add Comment</string>
    <string name="add_rate">Add Rate</string>
    <string name="offer">Offers</string>
    <string name="services">Packages</string>
    <string name="cart">Cart</string>
    <string name="no_offers_to_display">No Offers to display</string>
    <string name="no_services_to_display">No Services to display</string>
    <string name="no_items_to_display">No items to display</string>
    <string name="more_details">More Details</string>
    <string name="less_details">Less Details</string>
    <string name="location_on_map">Location on map</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="order_now">Order now</string>
    <string name="select_location_on_map">Select location on map</string>
    <string name="select_location">Select Location</string>
    <string name="empty_cart">Empty cart</string>
    <string name="help">Help</string>
    <string name="repeat_questions">Repeating questions</string>
    <string name="save">Save</string>
    <string name="save_edit">Save And Edit</string>
    <string name="inc_code">Incorrect code</string>
    <string name="user_not_active">User not active</string>
    <string name="not_active_phone">Not activate phone number</string>
    <string name="additional_services">Additional Services</string>
    <string name="am">Am</string>
    <string name="pm">Pm</string>
    <string name="car_type">Car type</string>
    <string name="car_type2">Car type : </string>
    <string name="service_type">Service type</string>
    <string name="service_price">Service price</string>
    <string name="service_price2">Service price : </string>
    <string name="payment">Payment</string>
    <string name="payment2">Payment</string>
    <string name="no_additional_services">No additional services</string>
    <string name="total">Total</string>
    <string name="cache">Cash</string>
    <string name="mada">Mada</string>
    <string name="enter_discount_code">Enter discount code</string>
    <string name="discount">Discount</string>
    <string name="choose_payment_method">Choose payment method</string>
    <string name="add_another_order">Add another order</string>
    <string name="ch_car_size">Choose car size</string>
    <string name="ch_car_type">Choose car type</string>
    <string name="ch_payment">Choose payment</string>
    <string name="service_provider">service provider : </string>
    <string name="your_rating_for_the_service">Your rating for the Provider</string>
    <string name="your_opinion_in_the_service">Your opinion in the service</string>
    <string name="order_not_finished">Order Not Finished</string>
    <string name="inv_coupon">Invalid coupon</string>
    <string name="cong">Congratulation ! you get</string>
    <string name="disc">discount.</string>
    <string name="ch_brand">Choose brand</string>
    <string name="change_password">Change Password</string>
    <string name="see_your_photo">See Your Photo</string>
    <string name="start_app">Start App</string>
    <string name="num_exceed">The maximum number of requests for the selected service has been exceeded</string>
    <string name="next">Next</string>
    <string name="Start">Start</string>
    <string name="sign_in_to_be_able_to_view_orders">Sign In To Be Able To View Orders</string>
    <string name="sign_in_to_view_profile">Sign In To View Profile</string>
    <string name="current">Current</string>
    <string name="prevoius">previous</string>
    <string name="coupons">Coupons</string>
    <string name="no_coupons_to_show">No coupons to show</string>
    <string name="order_num">Order-num </string>
    <string name="sent">Order Accepeted</string>
    <string name="in_location">In Location</string>
    <string name="in_way">The team is coming</string>
    <string name="order">Order</string>
    <string name="price2">Price</string>
    <string name="driver_name">Driver name</string>
    <string name="order_date">Order date</string>
    <string name="products">Products</string>
    <string name="info">Information</string>
    <string name="address">Address</string>
    <string name="not_available">Not available</string>
    <string name="cash">Cash</string>
    <string name="my_wallet">My Wallet</string>
    <string name="subscriptions">Subscribtions</string>
    <string name="application">Application</string>
    <string name="help_and_support">Help and support</string>
    <string name="start_date">Start Date</string>
    <string name="time_day">Time/Day</string>
    <string name="residual">Residual</string>
    <string name="subscription_request">subscription Request</string>
    <string name="subscription_details">Subscription Details</string>
    <string name="renew_it_with_wash_squad">Renew it with Wash Squad</string>
    <string name="steam_car_wash_mobile_service">Steam car wash mobile service</string>
    <string name="quick_order">Quick order</string>
    <string name="the_quick_order">The Quick order</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="a_copy_of_the_invoice">A copy of the invoice</string>
    <string name="tax_value">Tax value</string>
    <string name="visa">Visa</string>
    <string name="add_another_vehicle">Add another vehicle</string>
    <string name="by_completing_the_order_you_agree_to">By completing the order, you agree to</string>
    <string name="policies_and_terms_of_service">Policies and Terms of Service</string>
    <string name="my_wallet_balance">My wallet balance</string>
    <string name="profile2">Profile</string>
    <string name="share_and_connect_with_us">Share and connect with us</string>
    <string name="use_of_cache">Use of cache</string>
    <string name="cashback_balance">cashback balance</string>
    <string name="the_wallet_balance_is_not_enough_to_request_the_service">The wallet balance is not enough to request the service</string>
    <string name="package_price">Package price</string>
    <string name="request_to_postpone_an_appointment">Request to postpone an appointment</string>
    <string name="washing_details">Washing Details</string>
    <string name="need_change_money">Need change money?</string>
    <string name="washing_number">washing number</string>
    <string name="washing_date">washing date</string>
    <string name="washing_status">washing status</string>
    <string name="washing_delay">washing delay</string>
    <string name="washing_can_only_be_postponed_once">Washing can only be postponed once</string>
    <string name="new_password">New Password</string>
    <string name="enter_your_new_password">Enter your new password</string>
    <string name="at_least_6_letters_or_numbers">At least 6 letters or numbers</string>
    <string name="confirm_password">Confirm Password</string>
</resources>