<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="lang"
            type="String" />

        <variable
            name="backListener"
            type="com.creative.share.apps.wash_squad.interfaces.Listeners.BackListener" />

        <variable
            name="showCountryListener"
            type="com.creative.share.apps.wash_squad.interfaces.Listeners.ShowCountryDialogListener" />

        <variable
            name="passModel"
            type="com.creative.share.apps.wash_squad.models.Password2Model" />

        <variable
            name="passListener"
            type="com.creative.share.apps.wash_squad.interfaces.Listeners.PasswordListner" />


    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray1"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/colorPrimary"
            app:contentInsetEnd="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetStart="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{()->backListener.back()}"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:clickable="false"
                    android:longClickable="false"
                    android:padding="8dp"
                    android:rotation='@{lang.equals("ar")?180:0}'
                    android:src="@drawable/ic_arrow_left"
                    app:tint="@color/white" />

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:clickable="false"
                    android:gravity="center"
                    android:longClickable="false"
                    android:text="@string/change_password"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fillViewport="true"

            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                >


                <LinearLayout
                    android:id="@+id/ll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/rounded_white"
                    android:orientation="vertical"
                    android:padding="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias=".1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:gravity="center"
                        android:text="@string/new_password"
                        android:textColor="@color/colorPrimary"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:gravity="center"
                        android:text="@string/enter_your_new_password"
                        android:textColor="@color/colorPrimary"
                        android:textSize="14sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/rounded_white_strock_primary"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">


                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:errorEnabled="false"
                            app:hintEnabled="false"
                            app:passwordToggleEnabled="true"
                            app:passwordToggleTint="@color/gray5">

                            <EditText
                                error="@{passModel.error_password}"
                                android:layout_width="match_parent"
                                android:layout_height="30dp"
                                android:background="@color/transparent"
                                android:hint="@string/password"
                                android:inputType="textPassword"
                                android:paddingLeft="5dp"
                                android:paddingRight="5dp"
                                android:singleLine="true"
                                android:text="@={passModel.password}"
                                android:textColor="@color/black"
                                android:textColorHint="@color/gray4"
                                android:textSize="14sp"

                                />

                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:gravity="center"
                        android:text="@string/at_least_6_letters_or_numbers"
                        android:textColor="@color/gray4"
                        android:textSize="14sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/rounded_white_strock_primary"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">


                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:errorEnabled="false"
                            app:hintEnabled="false"
                            app:passwordToggleEnabled="true"
                            app:passwordToggleTint="@color/gray5">

                            <EditText
                                android:id="@+id/edtPassword"
                                error="@{passModel.error_confirm_password}"
                                android:layout_width="match_parent"
                                android:layout_height="30dp"
                                android:background="@color/transparent"
                                android:hint="@string/confirm_password"
                                android:inputType="textPassword"
                                android:paddingLeft="5dp"
                                android:paddingRight="5dp"
                                android:singleLine="true"
                                android:text="@={passModel.confirm_password}"
                                android:textColor="@color/black"
                                android:textColorHint="@color/gray4"
                                android:textSize="14sp"

                                />

                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:layout_marginBottom="20dp"
                        android:gravity="center"
                        android:text="@string/at_least_6_letters_or_numbers"
                        android:textColor="@color/gray4"
                        android:textSize="14sp" />

                </LinearLayout>


                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_send"
                    android:onClick="@{(v)->passListener.checkDatapass(passModel.password)}"
                    android:paddingLeft="40dp"
                    android:paddingRight="40dp"
                    android:text="@string/save"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@id/ll"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ll"


                    />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </ScrollView>

    </LinearLayout>

</layout>