<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="lang"
            type="String" />

        <variable
            name="loginModel"
            type="com.creative.share.apps.wash_squad.models.LoginModel" />

        <variable
            name="loginListener"
            type="com.creative.share.apps.wash_squad.interfaces.Listeners.LoginListener" />

        <variable
            name="skipListener"
            type="com.creative.share.apps.wash_squad.interfaces.Listeners.SkipListener" />

        <variable
            name="forgetlistener"
            type="com.creative.share.apps.wash_squad.interfaces.Listeners.ForgetListner" />

        <variable
            name="createAccountListener"
            type="com.creative.share.apps.wash_squad.interfaces.Listeners.CreateAccountListener" />

        <variable
            name="showCountryListener"
            type="com.creative.share.apps.wash_squad.interfaces.Listeners.ShowCountryDialogListener" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:fillViewport="true"
            android:fitsSystemWindows="true"
            android:scrollbars="none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_marginTop="50dp"
                android:padding="20dp"
                android:src="@drawable/logo_txt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"

                />

            <LinearLayout
                android:id="@+id/llDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/logo">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/renew_it_with_wash_squad"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="3dp"
                    android:text="@string/steam_car_wash_mobile_service"
                    android:textSize="15sp" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/llDescription">

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="25dp"
                    android:background="@drawable/btn_bg"
                    android:text="@string/log_in"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ll"
                    app:layout_constraintVertical_bias="0" />

                <Button
                    android:id="@+id/btnQuickOrder"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="25dp"
                    android:background="@drawable/btn_bg"
                    android:text="@string/quick_order"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ll"
                    app:layout_constraintVertical_bias="0" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout></layout>